--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
+    "@types/react": "^16.9.5",
+    "@types/react-native": "^0.60.19",
+    "@types/react-redux": "^7.1.4",
     "babel-jest": "^24.9.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
-    "react-test-renderer": "16.8.3"
+    "react-test-renderer": "16.8.3",
+    "typescript": "^3.6.4"
   },
   "jest": {
     "preset": "react-native"
